Fixed bug with color picker not showing the correct color

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -330,6 +330,7 @@ input {
 
 #colorpicker-dialog-input {
     flex: 1;
+    height: 100%;
     margin: 0px;
     padding: 0px;
     opacity: 0;
